Fixed Alignment of rectangle box in videos section: Home page

--- a/src/css/3-modules/about-us-videos.scss
+++ b/src/css/3-modules/about-us-videos.scss
@@ -5,9 +5,15 @@
 }
 .about-us-video-banner-img {
 	width:100%;
+	padding-right: 20px;
 }
 .about-us-video-section-container {
-	position:relative
+	position:relative;
+	padding: 0 15px;
+
+	@media(min-width: 768px) {
+		padding: 0;
+	}
 }
 .about-us-video-banner__wraper {
 	position:relative;
@@ -152,5 +158,15 @@
 
 	@media(min-width:768px){
 		margin:100px 0 0 0;
+	}
+}
+
+
+.rectangular-border-bottom-right{
+
+	&--about-us-video {
+		width: calc(100% - 20px);
+		height: 100%;
+		left: 20px;
 	}
 }
